kubernetes/network-policies/base/apps-httpbin.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: httpbin
  namespace: httpbin
spec:
  description: "Allow httpbin to receive traffic from the gateway and cluster"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: httpbingo
  ingress:
    - fromEntities:
        - cluster
        - ingress
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
