kubernetes/network-policies/base/apps-llama-cpp-igpu.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: llama-cpp-igpu
  namespace: llm
spec:
  endpointSelector:
    matchLabels:
      app: llama-cpp-igpu
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: open-webui
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
