kubernetes/network-policies/base/apps-yk-update-checker.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: yk-update-checker
  namespace: yk-update-checker
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: yk-update-checker
  ingress:
    - fromEntities:
        - cluster
        - ingress
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toEntities:
        - remote-node
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
