kubernetes/network-policies/base/observability-loki.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: loki-egress-to-s3
  namespace: loki
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: loki
  egress:
    - toCIDR:
        - 10.0.3.3/32
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: loki-egress-to-kube-apiserver
  namespace: loki
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: loki-ingress-from-alloy
  namespace: loki
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: gateway
      app.kubernetes.io/instance: loki
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: k8s-monitoring
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: loki-ingress-from-grafana
  namespace: loki
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: gateway
      app.kubernetes.io/instance: loki
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: grafana
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
