kubernetes/network-policies/base/observability-mimir.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mimir-egress-to-s3
  namespace: mimir
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: mimir
  egress:
    - toCIDR:
        - 10.0.3.3/32
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mimir-egress-to-kube-apiserver
  namespace: mimir
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mimir-ingress-from-alloy
  namespace: mimir
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: distributor
      app.kubernetes.io/instance: mimir
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: k8s-monitoring
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mimir-ingress-from-grafana
  namespace: mimir
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: query-frontend
      app.kubernetes.io/instance: mimir
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: grafana
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mimir-ingress-from-alloy-ruler
  namespace: mimir
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: ruler
      app.kubernetes.io/instance: mimir
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: k8s-monitoring
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    # "Mimir Ruler" Grafana datasource — rules API for the Alerting page.
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: grafana
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mimir-ruler-egress-to-alertmanager
  namespace: mimir
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: ruler
      app.kubernetes.io/instance: mimir
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: alertmanager
      toPorts:
        - ports:
            - port: "9093"
              protocol: TCP
