kubernetes/network-policies/base/platform-gpu-tools.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gpu-tools
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      app: gpu-tools
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
