kubernetes/network-policies/base/platform-trivy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-to-kube-api-server
  namespace: trivy
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: trivy-operator
  egress:
    - toEntities:
        - kube-apiserver
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-to-world
  namespace: trivy
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: trivy-server
  egress:
    - toEntities:
        - world
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-node-collector-kube-api
  namespace: trivy
spec:
  endpointSelector:
    matchLabels:
      app: node-collector
  egress:
    - toEntities:
        - kube-apiserver
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-vulnerability-to-world
  namespace: trivy
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/managed-by: trivy-operator
  egress:
    - toEntities:
        - world
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-vulnerability-operator-to-world
  namespace: trivy
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: trivy-operator
  egress:
    - toEntities:
        - world
