kubernetes/network-policies/base/platform-vpa.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vpa-admission-controller
  namespace: vpa
spec:
  description: "Allow apiserver to reach VPA admission webhook"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: admission-controller
      app.kubernetes.io/instance: vpa
  ingress:
    - fromEntities:
        - kube-apiserver
    - fromEntities:
        - remote-node
        - host
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
            - port: "443"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vpa-admission-certgen
  namespace: vpa
spec:
  description: "Allow VPA certgen job to reach kube-apiserver"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: admission-certgen
      app.kubernetes.io/instance: vpa
  egress:
    - toEntities:
        - kube-apiserver
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: goldilocks
  namespace: vpa
spec:
  description: "Allow Goldilocks controller and dashboard to reach kube-apiserver"
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - goldilocks
  ingress:
    - fromEntities:
        - ingress
  egress:
    - toEntities:
        - kube-apiserver
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vpa-recommender-updater
  namespace: vpa
spec:
  description: "Allow VPA recommender and updater to reach kube-apiserver"
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/component
        operator: In
        values:
          - recommender
          - updater
      - key: app.kubernetes.io/instance
        operator: In
        values:
          - vpa
  egress:
    - toEntities:
        - kube-apiserver
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "443"
              protocol: TCP
